--- a/src/assets/styles/operator.css
+++ b/src/assets/styles/operator.css
@@ -10,6 +10,10 @@
     box-shadow: 2px 2px 10px rgba(255, 255, 255, 0.2);
 }
 
+.navbar {
+    margin-left: -30px;
+}
+
 /* Ukuran Grid */
 .large { grid-column: span 2; height: 120px; }
 .medium { grid-column: span 1; height: 120px; }
